# pdfcombine

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md  environment.yaml  pdfcombine  pdfcombine.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  pythonpublish.yml
pdfcombine/: __init__.py
pdfcombine/cli/: pdfcombine.py
test/: combine.yaml  generate.py
tests/: generate.py
